--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <div class="container-fluid sticky-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light border-bottom border-2 border-white">
-                <a href="index.html" class="logo d-flex align-items-center me-auto">
-                    <img src="img/logogpi.PNG" alt="Logo" style="height:70px;">
+                <a href="index.html" class="logo d-flex align-items-center ">
+                    <img src="img/logogpi.PNG" alt="Logo" style="height:100px;">
                 </a>
                 <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -171,12 +171,12 @@
                         <a class="btn btn-outline-primary btn-square border-2 me-2" href="https://www.facebook.com/profile.php?id=61584160284965&rdid=SFINlIFesKajARa2&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1BtsFN7GpG%2F#">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a class="btn btn-outline-primary btn-square border-2 me-2" href="#!">
+                       <!--  <a class="btn btn-outline-primary btn-square border-2 me-2" href="#!">
                             <i class="fab fa-twitter"></i>
                         </a>
                         <a class="btn btn-outline-primary btn-square border-2 me-2" href="#!">
                             <i class="fab fa-instagram"></i>
-                        </a>
+                        </a> -->
                         <a class="btn btn-outline-primary btn-square border-2" href="#!">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
@@ -580,12 +580,12 @@
                     <a class="btn btn-outline-primary btn-square border-2 me-2" href="https://www.facebook.com/profile.php?id=61584160284965&rdid=SFINlIFesKajARa2&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1BtsFN7GpG%2F#">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="btn btn-outline-primary btn-square border-2 me-2" href="#!">
+                 <!--    <a class="btn btn-outline-primary btn-square border-2 me-2" href="#!">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a class="btn btn-outline-primary btn-square border-2 me-2" href="#!">
                         <i class="fab fa-instagram"></i>
-                    </a>
+                    </a> -->
                 </div>
             </div>
 
