--- a/produit-polypropylène.html
+++ b/produit-polypropylène.html
@@ -166,7 +166,7 @@
         .feature-card h4 {
             font-size: 0.9rem;
             margin-bottom: 0.3rem;
-            color: #0257a8;
+            color: #FFC72A;
         }
 
         .feature-card p {
@@ -243,22 +243,7 @@
             background: #f8f9fa;
         }
 
-        .btn {
-            display: inline-block;
-            padding: 0.6rem 1.2rem;
-            background: linear-gradient(135deg, #0257a8 0%, #0257a8 100%);
-            color: white;
-            text-decoration: none;
-            border-radius: 4px;
-            border: none;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            font-weight: bold;
-            font-size: 0.9rem;
-            box-shadow: 0 3px 8px rgba(2, 87, 168, 0.3);
-        }
-
-        .btn:hover {
+     .btn-contact:hover {
             transform: translateY(-2px);
             box-shadow: 0 5px 15px rgba(2, 87, 168, 0.4);
         }
@@ -270,12 +255,16 @@
             margin: 1.5rem auto;
             max-width: 250px;
             font-size: 0.9rem;
-            padding: 0.8rem 1.5rem;
-            box-shadow: 0 3px 8px rgba(230, 126, 34, 0.3);
-        }
-
-        .btn-contact:hover {
-            box-shadow: 0 5px 15px rgba(230, 126, 34, 0.4);
+            padding: 0.6rem 1.2rem;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            border: none;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-weight: bold;
+            font-size: 0.9rem;
+            box-shadow: 0 3px 8px rgba(2, 87, 168, 0.3);
         }
 
         /* Product Header */
