--- a/produit-sacs-standard.html
+++ b/produit-sacs-standard.html
@@ -167,7 +167,7 @@
         .feature-card h4 {
             font-size: 0.9rem;
             margin-bottom: 0.3rem;
-            color: #0257a8;
+            color: #FFC72A;
         }
 
         .feature-card p {
@@ -244,22 +244,7 @@
             background: #f8f9fa;
         }
 
-        .btn {
-            display: inline-block;
-            padding: 0.6rem 1.2rem;
-            background: linear-gradient(135deg, #0257a8 0%, #0257a8 100%);
-            color: white;
-            text-decoration: none;
-            border-radius: 4px;
-            border: none;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            font-weight: bold;
-            font-size: 0.9rem;
-            box-shadow: 0 3px 8px rgba(2, 87, 168, 0.3);
-        }
-
-        .btn:hover {
+     .btn-contact:hover {
             transform: translateY(-2px);
             box-shadow: 0 5px 15px rgba(2, 87, 168, 0.4);
         }
@@ -271,12 +256,16 @@
             margin: 1.5rem auto;
             max-width: 250px;
             font-size: 0.9rem;
-            padding: 0.8rem 1.5rem;
-            box-shadow: 0 3px 8px rgba(230, 126, 34, 0.3);
-        }
-
-        .btn-contact:hover {
-            box-shadow: 0 5px 15px rgba(230, 126, 34, 0.4);
+            padding: 0.6rem 1.2rem;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            border: none;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-weight: bold;
+            font-size: 0.9rem;
+            box-shadow: 0 3px 8px rgba(2, 87, 168, 0.3);
         }
 
         /* Responsive pour le tableau */
@@ -390,7 +379,7 @@
                         <th>Dimensions</th>
                         <th>Épaisseur</th>
                         <th>Matière</th>
-                        <th>Couleur</th>
+                        <!-- <th>Couleur</th> -->
                         <th>Type</th>
                     </tr>
                 </thead>
@@ -400,7 +389,7 @@
                         <td>17 x 24 cm + R5</td>
                         <td>40μm</td>
                         <td>LDPE RECYCLE 100%</td>
-                        <td>Transparent</td>
+                       <!--  <td>Transparent</td> -->
                         <td>Recyclé 100%</td>
                     </tr>
                     <tr>
@@ -408,7 +397,7 @@
                         <td>18 x 25 cm + R5</td>
                         <td>50μm</td>
                         <td>LDPE RECYCLE 100%</td>
-                        <td>Transparent</td>
+                       <!--  <td>Transparent</td> -->
                         <td>Recyclé 100%</td>
                     </tr>
                     <tr>
@@ -416,7 +405,7 @@
                         <td>18 x 43 cm + R5</td>
                         <td>50μm</td>
                         <td>LDPE RECYCLE 100%</td>
-                        <td>Transparent</td>
+                        <!--  <td>Transparent</td> -->
                         <td>Recyclé 100%</td>
                     </tr>
                     <tr>
@@ -424,7 +413,7 @@
                         <td>22 x 32 cm + R5</td>
                         <td>40μm</td>
                         <td>LDPE RECYCLE 100%</td>
-                        <td>Transparent</td>
+                        <!--  <td>Transparent</td> -->
                         <td>Recyclé 100%</td>
                     </tr>
                     <tr>
@@ -432,7 +421,7 @@
                         <td>27 x 30 cm + R5</td>
                         <td>50μm</td>
                         <td>LDPE RECYCLE 100%</td>
-                        <td>Transparent</td>
+                        <!--  <td>Transparent</td> -->
                         <td>Recyclé 100%</td>
                     </tr>
                     <tr>
@@ -440,7 +429,7 @@
                         <td>35 x 50 cm + R5</td>
                         <td>50μm</td>
                         <td>LDPE RECYCLE 100%</td>
-                        <td>Transparent</td>
+                       <!--  <td>Transparent</td> -->
                         <td>Recyclé 100%</td>
                     </tr>
                     <tr>
@@ -448,7 +437,7 @@
                         <td>30 x 40 cm + R5</td>
                         <td>40μm</td>
                         <td>LDPE RECYCLE 50%</td>
-                        <td>Transparent</td>
+                       <!--  <td>Transparent</td> -->
                         <td>Recyclé Mixte</td>
                     </tr>
                     <tr>
@@ -456,7 +445,7 @@
                         <td>30 x 40 cm + R5</td>
                         <td>40μm</td>
                         <td>LDPE RECYCLE 75%</td>
-                        <td>Transparent</td>
+                       <!--  <td>Transparent</td> -->
                         <td>Recyclé Mixte</td>
                     </tr>
                     <tr>
@@ -464,7 +453,7 @@
                         <td>35 x 40 cm + R5</td>
                         <td>40μm</td>
                         <td>LDPE RECYCLE 50%</td>
-                        <td>Transparent</td>
+                      <!--  <td>Transparent</td> -->
                         <td>Recyclé Mixte</td>
                     </tr>
                     <tr>
@@ -472,7 +461,7 @@
                         <td>4 x 6 cm</td>
                         <td>-</td>
                         <td>LDPE</td>
-                        <td>Transparent</td>
+                        <!--  <td>Transparent</td> -->
                         <td>Fermeture ZIP</td>
                     </tr>
                     <tr>
@@ -480,7 +469,7 @@
                         <td>9 x 17 cm</td>
                         <td>50μm</td>
                         <td>LDPE</td>
-                        <td>Transparent</td>
+                       <!--  <td>Transparent</td> -->
                         <td>Standard</td>
                     </tr>
                     <tr>
@@ -488,7 +477,7 @@
                         <td>12 x 15 cm</td>
                         <td>25μm</td>
                         <td>LDPE</td>
-                        <td>Transparent</td>
+                        <!--  <td>Transparent</td> -->
                         <td>Standard</td>
                     </tr>
                     <tr>
@@ -496,7 +485,7 @@
                         <td>12 x 20 cm</td>
                         <td>60μm</td>
                         <td>LDPE</td>
-                        <td>Transparent</td>
+                        <!--  <td>Transparent</td> -->
                         <td>Standard</td>
                     </tr>
                     <tr>
@@ -504,7 +493,7 @@
                         <td>20 x 40 cm</td>
                         <td>20μm</td>
                         <td>HDPE</td>
-                        <td>Transparent</td>
+                        <!--  <td>Transparent</td> -->
                         <td>Haute Densité</td>
                     </tr>
                 </tbody>
