--- a/produit-sachets-pre-ouverts.html
+++ b/produit-sachets-pre-ouverts.html
@@ -165,7 +165,7 @@
         .feature-card h4 {
             font-size: 0.9rem;
             margin-bottom: 0.3rem;
-            color: #0257a8;
+            color: #FFC72A;
         }
 
         .feature-card p {
@@ -242,22 +242,7 @@
             background: #f8f9fa;
         }
 
-        .btn {
-            display: inline-block;
-            padding: 0.6rem 1.2rem;
-            background: linear-gradient(135deg, #0257a8 0%, #0257a8 100%);
-            color: white;
-            text-decoration: none;
-            border-radius: 4px;
-            border: none;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            font-weight: bold;
-            font-size: 0.9rem;
-            box-shadow: 0 3px 8px rgba(2, 87, 168, 0.3);
-        }
-
-        .btn:hover {
+     .btn-contact:hover {
             transform: translateY(-2px);
             box-shadow: 0 5px 15px rgba(2, 87, 168, 0.4);
         }
@@ -269,14 +254,17 @@
             margin: 1.5rem auto;
             max-width: 250px;
             font-size: 0.9rem;
-            padding: 0.8rem 1.5rem;
-            box-shadow: 0 3px 8px rgba(230, 126, 34, 0.3);
+            padding: 0.6rem 1.2rem;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            border: none;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-weight: bold;
+            font-size: 0.9rem;
+            box-shadow: 0 3px 8px rgba(2, 87, 168, 0.3);
         }
-
-        .btn-contact:hover {
-            box-shadow: 0 5px 15px rgba(230, 126, 34, 0.4);
-        }
-
         /* Product Header */
         .product-header {
             background: white;
@@ -305,8 +293,8 @@
 
         /* Process Steps */
         .usage-process {
-            background: linear-gradient(135deg, #0257a8 0%, #0257a8 100%);
-            color: white;
+           background: linear-gradient(135deg, #f8f9fa 0%, #f8f9fa 100%);
+           color: #555;
             padding: 1.5rem;
             border-radius: 8px;
             margin-bottom: 1.5rem;
@@ -332,11 +320,16 @@
             backdrop-filter: blur(10px);
         }
 
+
+        .process-step h4{
+            color: #0459ab;
+        }
+
         .step-number {
             display: inline-block;
             width: 30px;
             height: 30px;
-            background: white;
+            background: #FFC72A;
             color: #0257a8;
             border-radius: 50%;
             line-height: 30px;
