--- a/produit.html
+++ b/produit.html
@@ -246,74 +246,107 @@
             background: #f8f9fa;
         }
 
-        .products-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-            margin-top: 40px;
-        }
+        
 
-        .product-card {
-            background: white;
-            border-radius: 10px;
-            padding: 30px;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            border-left: 4px solid #26b8bf;
-            position: relative;
-        }
 
-        .product-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-        }
+        /* PRODUCTS SECTION */
+.products-section {
+    padding: 80px 0;
+    background: #f8f9fa;
+}
 
-        .product-card i {
-            font-size: 2.5rem;
-            color: #0257a8;
-            margin-bottom: 20px;
-        }
+/* GRID */
+.products-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Desktop */
+    gap: 25px;
+    margin-top: 40px;
+}
 
-        .product-card h3 {
-            font-size: 1.4rem;
-            margin-bottom: 15px;
-            color: #0357a9;
-        }
+/* CARD */
+.product-card {
+    position: relative;
+    background: #fff;
+    border-radius: 12px;
+    padding: 25px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    transition: transform 0.3s ease;
+    border-left: 4px solid #26b8bf;
+}
 
-        .product-card p {
-            color: #666;
-            margin-bottom: 10px;
-        }
+.product-card:hover {
+    transform: translateY(-5px);
+}
 
-        .features-section {
-            padding: 80px 0;
-            background: white;
-        }
+.product-card i {
+    font-size: 2.5rem;
+    color: #0257a8;
+    margin-bottom: 20px;
+}
 
-        .features-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 30px;
-            margin-top: 40px;
-        }
+.product-card h3 {
+    font-size: 1.4rem;
+    margin-bottom: 10px;
+    color: #0357a9;
+}
 
-        .feature-item {
-            text-align: center;
-            padding: 30px 20px;
-        }
+.product-card p {
+    color: #666;
+    margin-bottom: 40px;
+}
 
-        .feature-item i {
-            font-size: 2.5rem;
-            color: #0257a8;
-            margin-bottom: 20px;
-        }
+/* ARROW */
+.product-card .arrow-circle {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    width: 45px;
+    height: 45px;
+    background: #FFC72A;
+    color: #0033A1;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 28px;
+    font-weight: bold;
+    transition: 0.3s ease;
+}
 
-        .feature-item h3 {
-            font-size: 1.3rem;
-            margin-bottom: 15px;
-            color: #ffc72a;
-        }
+.product-card:hover .arrow-circle {
+    transform: translateX(5px);
+    background: #FFB500;
+}
 
+/* FEATURES SECTION */
+.features-section {
+    padding: 80px 0;
+    background: white;
+}
+
+.features-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 30px;
+    margin-top: 40px;
+}
+
+.feature-item {
+    text-align: center;
+    padding: 30px 20px;
+}
+
+.feature-item i {
+    font-size: 2.5rem;
+    color: #0257a8;
+    margin-bottom: 20px;
+}
+
+.feature-item h3 {
+    font-size: 1.3rem;
+    margin-bottom: 15px;
+    color: #ffc72a;
+}
         .cta-section {
             padding: 80px 0;
             background: linear-gradient(135deg, #fff 0%, #fff 100%);
@@ -366,46 +399,7 @@
 
 
 
-        .products-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-}
-
-.product-card {
-    position: relative; /* nécessaire pour placer la flèche */
-    background: #fff;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    transition: transform 0.3s;
-}
-
-.product-card:hover {
-    transform: translateY(-5px);
-}
-
-.product-card .arrow-circle {
-    position: absolute;
-    bottom: 150px;
-    right: 20px;
-    width: 40px;
-    height: 40px;
-    background: #FFC72A;
-    color: #0033A1;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    font-size: 30px;
-    font-weight: bold;
-    transition: transform 0.3s, background 0.3s;
-}
-
-.product-card:hover .arrow-circle {
-    transform: translateX(5px);
-    background: #FFB500; /* léger effet au hover */
-}
+       
 
     </style>
 
